//
//  ListOrdersWorker.swift
//  CleanAppOldUI
//
//  Created by Ricardo Ruiz on 10/10/2019.
//  Copyright (c) 2019 Ricardo Ruiz. All rights reserved.
//
//  This file was generated by the Clean Swift Xcode Templates so
//  you can apply clean architecture to your iOS and Mac projects,
//  see http://clean-swift.com
//

import UIKit

class ListOrdersWorker
{
    
    func LoadProducts (completionHandler: @escaping (([Product]) -> Void))
    {
        let products : [Product] = [Product(name: "Product1"), Product(name: "Product2")]
        
        DispatchQueue.main.async {
            // Server call for retrieving products
            completionHandler(products)
        }
    }
    
    func DeleteProduct(completionHandler: @escaping (() -> Void))
    {
        DispatchQueue.main.async {
            // Server call for deleting product
            completionHandler()
        }
    }
    
    func AddProduct(completionHandler: @escaping ((Product) -> Void))
    {
        DispatchQueue.main.async {
            // Server call for adding product
            let product = Product(name: "New product")
            completionHandler(product)
        }
    }
}
