...
        super.viewDidLoad()
        
        tableView.delegate = self
        tableView.dataSource = self
        tableView.allowsMultipleSelectionDuringEditing = false
        
        addProductButton.setTitle("Add product", for: .normal)
        addProductButton.backgroundColor = .blue
        
        tableView.addSubview(addProductButton)
        addProductButton.translatesAutoresizingMaskIntoConstraints = false;
                
        addProductButton.leftAnchor.constraint(equalTo: tableView.safeAreaLayoutGuide.leftAnchor).isActive = true
...
